--- a/notebooks/double_well_sims.ipynb
+++ b/notebooks/double_well_sims.ipynb
@@ -43,10 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copied from utils.em_simulator.py\n",
     "def eu_simulator(f_t, g_t, W_t, x0, T, dt):\n",
     "    \"\"\"\n",
     "    Simulate an SDE using the Euler-Maruyama method.\n",
