to tenth moment

--- a/notebooks/double_well_sims.ipynb
+++ b/notebooks/double_well_sims.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,36 +135,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_moments(X_panel):\n",
+    "def compute_moments(X_panel, K=10):\n",
     "    \"\"\"\n",
-    "    Compute mean, variance, skewness, and kurtosis at each time step.\n",
+    "    Compute raw moments up to order K at each time step.\n",
     "    \n",
     "    Parameters:\n",
     "        X_panel: array of shape (n_sims, T_plus) where T_plus = N+1\n",
+    "        K: int - highest moment order (default 10)\n",
     "    \n",
     "    Returns:\n",
-    "        moments: array of shape (T_plus, 4) with columns [mean, var, skew, kurt]\n",
+    "        moments: array of shape (T_plus, K) with columns [m1, m2, ..., mK]\n",
+    "                 where m_k = E[X^k] (k-th raw moment)\n",
     "    \"\"\"\n",
     "    n_sims, T_plus = X_panel.shape\n",
-    "    moments = np.empty((T_plus, 4), dtype=np.float64)\n",
+    "    moments = np.empty((T_plus, K), dtype=np.float64)\n",
     "    \n",
     "    for t in range(T_plus):\n",
     "        X_t = X_panel[:, t]\n",
-    "        moments[t, 0] = np.mean(X_t)                    # mean\n",
-    "        moments[t, 1] = np.var(X_t, ddof=1)            # variance\n",
-    "        moments[t, 2] = stats.skew(X_t)                # skewness\n",
-    "        moments[t, 3] = stats.kurtosis(X_t, fisher=True)  # excess kurtosis\n",
+    "        for k in range(1, K + 1):\n",
+    "            moments[t, k - 1] = np.mean(X_t**k)  # k-th raw moment\n",
     "    \n",
     "    return moments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,35 +184,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing moments at each time step...\n",
-      "Moments shape: (5001, 4)\n",
+      "Computing moments (up to 10th order) at each time step...\n",
+      "Moments shape: (5001, 10)\n",
+      "Each row contains: [m1, m2, m3, ..., m10] where m_k = E[X^k]\n",
+      "\n",
       "Applying Schatten-L2 normalization...\n",
       "Frobenius norm of normalized moments: 1.000000\n"
      ]
     }
    ],
    "source": [
-    "# Compute moments\n",
-    "print(\"Computing moments at each time step...\")\n",
-    "moments = compute_moments(X_panel)\n",
+    "# Compute moments (up to 10th order)\n",
+    "print(\"Computing moments (up to 10th order) at each time step...\")\n",
+    "moments = compute_moments(X_panel, K=10)\n",
     "print(f\"Moments shape: {moments.shape}\")\n",
+    "print(f\"Each row contains: [m1, m2, m3, ..., m10] where m_k = E[X^k]\")\n",
     "\n",
     "# Apply Schatten-L2 normalization\n",
-    "print(\"Applying Schatten-L2 normalization...\")\n",
+    "print(\"\\nApplying Schatten-L2 normalization...\")\n",
     "normalized_moments = schatten_l2_normalize(moments)\n",
     "print(f\"Frobenius norm of normalized moments: {np.linalg.norm(normalized_moments, ord='fro'):.6f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +245,8 @@
      "output_type": "stream",
      "text": [
       "Saving normalized moments...\n",
-      "Saved to data/DoubleWell_moments.csv\n"
+      "Saved to data/DoubleWell_moments.csv\n",
+      "Columns: ['m1', 'm2', 'm3', 'm4', 'm5', 'm6', 'm7', 'm8', 'm9', 'm10']\n"
      ]
     }
    ],
@@ -251,15 +255,16 @@
     "print(\"Saving normalized moments...\")\n",
     "df_moments = pd.DataFrame(\n",
     "    normalized_moments,\n",
-    "    columns=['mean', 'variance', 'skewness', 'kurtosis']\n",
+    "    columns=[f'm{k}' for k in range(1, 11)]  # m1, m2, ..., m10\n",
     ")\n",
     "df_moments.to_csv('../data/DoubleWell_moments.csv', index=False)\n",
-    "print(\"Saved to data/DoubleWell_moments.csv\")"
+    "print(\"Saved to data/DoubleWell_moments.csv\")\n",
+    "print(f\"Columns: {list(df_moments.columns)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
