updated horizon fx

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4TMdRyHyXb3N",
-        "outputId": "335afe81-0b4c-4301-b3be-267c1ad09a5a"
+        "outputId": "9fb074ee-db04-4a93-f0f8-e4481da8201a"
       },
       "outputs": [
         {
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AnPZNvYsdACe",
-        "outputId": "5d2c9ea0-5459-4ca5-ec34-c8cf1ea93475"
+        "outputId": "5ee42499-9193-40fe-db71-f5c48d38848f"
       },
-      "execution_count": 2,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "lIAfzn2GZjcf"
       },
-      "execution_count": 3,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "lWaCtmeUZnTG"
       },
-      "execution_count": 4,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "r80n3JFxakyu"
       },
-      "execution_count": 5,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "P1DTdRINZ8T7"
       },
-      "execution_count": 28,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "G3CxYkmPaNjx"
       },
-      "execution_count": 6,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -311,60 +311,65 @@
       "metadata": {
         "id": "3BSDS-6aabUo"
       },
-      "execution_count": 7,
+      "execution_count": 47,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def compute_multi_horizon_metrics(M_true, preds, T_train, horizons=(1, 5, 10)):\n",
-        "    \"\"\"\n",
-        "    M_true: [T, k] unnormalized true moments\n",
-        "    preds : [L, k] predictions for times T_train+1..T-1\n",
-        "            where L = T - T_train - 1\n",
-        "    T_train: split index\n",
-        "    Returns:\n",
-        "        DataFrame with MSE, RMSE, NRMSE per horizon.\n",
-        "    \"\"\"\n",
-        "    T, k = M_true.shape\n",
-        "    L = preds.shape[0]   # = T - T_train - 1\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
-        "    results = []\n",
+        "def compute_multi_horizon_metrics(M_true, preds, T_train, horizons=(1, 5, 10)):\n",
+        "    M_true = np.asarray(M_true)\n",
+        "    preds  = np.asarray(preds)\n",
+        "\n",
+        "    T, k = M_true.shape\n",
+        "    L, k_pred = preds.shape\n",
+        "    assert k == k_pred, \"M_true and preds must have same feature dimension\"\n",
+        "\n",
+        "    rows = []\n",
         "\n",
         "    for h in horizons:\n",
-        "        max_i = L - (h - 1)\n",
-        "        if max_i <= 0:\n",
+        "        # For horizon h, we interpret preds[j] (j >= h-1) as an h-step-ahead\n",
+        "        # forecast originating at j - (h - 1). The corresponding true time index is:\n",
+        "        #   t_target = T_train + 1 + j\n",
+        "        start_j = h - 1\n",
+        "        if start_j >= L:\n",
+        "            continue  # not enough rollout length for this horizon\n",
+        "\n",
+        "        js = np.arange(start_j, L)\n",
+        "        t_targets = T_train + 1 + js\n",
+        "\n",
+        "        # Make sure we don't go past the end of M_true\n",
+        "        mask = t_targets < T\n",
+        "        js = js[mask]\n",
+        "        t_targets = t_targets[mask]\n",
+        "\n",
+        "        if len(js) == 0:\n",
         "            continue\n",
         "\n",
-        "        Y_true = []\n",
-        "        Y_hat = []\n",
+        "        Y_hat  = preds[js]          # predictions at times T_train+1+js\n",
+        "        Y_true = M_true[t_targets]  # corresponding ground truth\n",
         "\n",
-        "        for i in range(max_i):\n",
-        "            t_target = T_train + 1 + i + (h - 1)\n",
-        "            if t_target >= T:\n",
-        "                break\n",
-        "            Y_true.append(M_true[t_target])\n",
-        "            Y_hat.append(preds[i])\n",
+        "        mse   = ((Y_true - Y_hat) ** 2).mean()\n",
+        "        rmse  = np.sqrt(mse)\n",
+        "        std_y = Y_true.std()\n",
+        "        nrmse = rmse / (std_y + 1e-8)\n",
         "\n",
-        "        Y_true = np.array(Y_true)\n",
-        "        Y_hat = np.array(Y_hat)\n",
+        "        rows.append({\n",
+        "            \"horizon\": h,\n",
+        "            \"MSE\": mse,\n",
+        "            \"RMSE\": rmse,\n",
+        "            \"NRMSE\": nrmse\n",
+        "        })\n",
         "\n",
-        "        if len(Y_true) == 0:\n",
-        "            continue\n",
-        "\n",
-        "        mse = ((Y_true - Y_hat) ** 2).mean()\n",
-        "        rmse = np.sqrt(mse)\n",
-        "        std_true = Y_true.std()\n",
-        "        nrmse = rmse / (std_true + 1e-8)\n",
-        "\n",
-        "        results.append({\"horizon\": h, \"MSE\": mse, \"RMSE\": rmse, \"NRMSE\": nrmse})\n",
-        "\n",
-        "    return pd.DataFrame(results)\n"
+        "    return pd.DataFrame(rows)\n"
       ],
       "metadata": {
         "id": "aV7MnI4Xacf0"
       },
-      "execution_count": 8,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -425,7 +430,7 @@
       "metadata": {
         "id": "RWw1WF4hcnu7"
       },
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -454,7 +459,7 @@
       "metadata": {
         "id": "iimuTqetUV4r"
       },
-      "execution_count": 10,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -484,7 +489,7 @@
       "metadata": {
         "id": "MQQ8OHBVUX7K"
       },
-      "execution_count": 11,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -548,7 +553,7 @@
       "metadata": {
         "id": "iyH9GPwhUZS-"
       },
-      "execution_count": 30,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -565,7 +570,7 @@
       "metadata": {
         "id": "o9DN2AS2gZty"
       },
-      "execution_count": 13,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -600,7 +605,7 @@
       "metadata": {
         "id": "vYKWnGqIZCcT"
       },
-      "execution_count": 24,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -630,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9H2EGIuggIRw",
-        "outputId": "822e0833-e6e2-4066-8faf-ef7dc343a997"
+        "outputId": "f4aeb7ef-8138-4b26-8e1a-2b6e84a236db"
       },
-      "execution_count": 18,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,9 +716,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y4WVHz8mZEwQ",
-        "outputId": "9f75fa03-2355-43bc-a738-58300767d36c"
+        "outputId": "4468caf0-afe0-47af-aaf1-26c4fbd3d00f"
       },
-      "execution_count": 25,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,9 +763,9 @@
           "height": 1000
         },
         "id": "x9_s3Cl_cvcn",
-        "outputId": "4f6857d9-ffa1-4477-9038-d9cc39b92c57"
+        "outputId": "87938911-a619-44a7-d78d-e5f4ef504fe6"
       },
-      "execution_count": 38,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,8 +775,8 @@
             "===== OU (VAR) =====\n",
             "   horizon       MSE      RMSE     NRMSE\n",
             "0        1  0.001993  0.044639  1.033010\n",
-            "1        5  0.002149  0.046360  1.038861\n",
-            "2       10  0.001782  0.042215  1.026476\n"
+            "1        5  0.002149  0.046359  1.038855\n",
+            "2       10  0.001782  0.042214  1.026472\n"
           ]
         },
         {
@@ -812,8 +817,8 @@
             "===== Double-well (VAR) =====\n",
             "   horizon           MSE      RMSE     NRMSE\n",
             "0        1  1.138526e-08  0.000107  0.137583\n",
-            "1        5  1.133270e-08  0.000106  0.137260\n",
-            "2       10  1.126527e-08  0.000106  0.136842\n"
+            "1        5  1.141511e-08  0.000107  0.137758\n",
+            "2       10  1.145159e-08  0.000107  0.137969\n"
           ]
         },
         {
@@ -854,8 +859,8 @@
             "===== CIR (VAR) =====\n",
             "   horizon       MSE      RMSE     NRMSE\n",
             "0        1  0.000030  0.005510  0.239932\n",
-            "1        5  0.000029  0.005418  0.235825\n",
-            "2       10  0.000028  0.005305  0.230717\n"
+            "1        5  0.000031  0.005547  0.241440\n",
+            "2       10  0.000031  0.005594  0.243318\n"
           ]
         },
         {
@@ -896,8 +901,8 @@
             "===== Polynomial baseline: OU (Poly) =====\n",
             "   horizon       MSE      RMSE     NRMSE\n",
             "0        1  0.001993  0.044639  1.033008\n",
-            "1        5  0.002149  0.046359  1.038852\n",
-            "2       10  0.001782  0.042214  1.026471\n"
+            "1        5  0.002149  0.046359  1.038855\n",
+            "2       10  0.001782  0.042214  1.026472\n"
           ]
         },
         {
@@ -936,10 +941,10 @@
           "text": [
             "\n",
             "===== Polynomial baseline: Double-well (Poly) =====\n",
-            "   horizon           MSE      RMSE     NRMSE\n",
-            "0        1  2.242809e-08  0.000150  0.193104\n",
-            "1        5  2.231680e-08  0.000149  0.192617\n",
-            "2       10  2.217731e-08  0.000149  0.192001\n"
+            "   horizon           MSE     RMSE     NRMSE\n",
+            "0        1  2.242809e-08  0.00015  0.193104\n",
+            "1        5  2.248685e-08  0.00015  0.193349\n",
+            "2       10  2.255969e-08  0.00015  0.193649\n"
           ]
         },
         {
@@ -980,8 +985,8 @@
             "===== Polynomial baseline: CIR (Poly) =====\n",
             "   horizon       MSE      RMSE     NRMSE\n",
             "0        1  0.000052  0.007196  0.313347\n",
-            "1        5  0.000052  0.007215  0.314058\n",
-            "2       10  0.000052  0.007236  0.314737\n"
+            "1        5  0.000052  0.007244  0.315304\n",
+            "2       10  0.000053  0.007304  0.317678\n"
           ]
         },
         {
@@ -1022,23 +1027,23 @@
             "===== Summary of Baseline Results =====\n",
             "    horizon           MSE      RMSE     NRMSE model\n",
             "0         1  1.992672e-03  0.044639  1.033010   VAR\n",
-            "1         5  2.149224e-03  0.046360  1.038861   VAR\n",
-            "2        10  1.782070e-03  0.042215  1.026476   VAR\n",
+            "1         5  2.149196e-03  0.046359  1.038855   VAR\n",
+            "2        10  1.782057e-03  0.042214  1.026472   VAR\n",
             "3         1  1.138526e-08  0.000107  0.137583   VAR\n",
-            "4         5  1.133270e-08  0.000106  0.137260   VAR\n",
-            "5        10  1.126527e-08  0.000106  0.136842   VAR\n",
+            "4         5  1.141511e-08  0.000107  0.137758   VAR\n",
+            "5        10  1.145159e-08  0.000107  0.137969   VAR\n",
             "6         1  3.035770e-05  0.005510  0.239932   VAR\n",
-            "7         5  2.935381e-05  0.005418  0.235825   VAR\n",
-            "8        10  2.813819e-05  0.005305  0.230717   VAR\n",
+            "7         5  3.076829e-05  0.005547  0.241440   VAR\n",
+            "8        10  3.129568e-05  0.005594  0.243318   VAR\n",
             "9         1  1.992664e-03  0.044639  1.033008  Poly\n",
-            "10        5  2.149185e-03  0.046359  1.038852  Poly\n",
-            "11       10  1.782054e-03  0.042214  1.026471  Poly\n",
+            "10        5  2.149196e-03  0.046359  1.038855  Poly\n",
+            "11       10  1.782057e-03  0.042214  1.026472  Poly\n",
             "12        1  2.242809e-08  0.000150  0.193104  Poly\n",
-            "13        5  2.231680e-08  0.000149  0.192617  Poly\n",
-            "14       10  2.217731e-08  0.000149  0.192001  Poly\n",
+            "13        5  2.248685e-08  0.000150  0.193349  Poly\n",
+            "14       10  2.255969e-08  0.000150  0.193649  Poly\n",
             "15        1  5.177775e-05  0.007196  0.313347  Poly\n",
-            "16        5  5.206017e-05  0.007215  0.314058  Poly\n",
-            "17       10  5.236384e-05  0.007236  0.314737  Poly\n"
+            "16        5  5.247389e-05  0.007244  0.315304  Poly\n",
+            "17       10  5.334714e-05  0.007304  0.317678  Poly\n"
           ]
         }
       ]
